sauvegarde.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx 
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        imagePullPolicy: Never
        ports:
        - containerPort: 22
        - containerPort: 80
        - containerPort: 443
        livenessProbe:
          httpGet:
            path: /
            port: 443
            scheme: HTTPS
          initialDelaySeconds: 60
          periodSeconds: 20
          timeoutSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: LoadBalancer
  ports:
  - port: 22
    protocol: TCP
    name: ssh
  - port: 80
    protocol: TCP
    name: http
  - port: 443
    protocol: TCP
    name: https
  selector:
    app: nginx
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    annotations:
    ingress.kubernetes.io/ssl-redirect: "false" 
  name: nginx
spec:
    # tls:
    # - secretName: nginx
  backend:
    serviceName: nginx
    servicePort: 80
    servicePort: 443
